Githubsalesforcebackup/force-app/main/default/objects/Relieving_Letter__c/Relieving_Letter__c.object-meta.xml
<CustomObject>
    <label>Relieving Letter</label>
    <nameField>
        <displayFormat>websfdc-{0}</displayFormat>
        <label>Relieving Letter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relieving Letters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>