Githubsalesforcebackup/force-app/main/default/objects/Relieving_Letter__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <label>Candidate Name</label>
    <referenceTo>Candidate_Information__c</referenceTo>
    <relationshipLabel>Relieving Letters</relationshipLabel>
    <relationshipName>Relieving_Letters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>