Githubsalesforcebackup/force-app/main/default/objects/Relieving_Letter__c/fields/Day_in_text_Last_Working_Day__c.field-meta.xml
<CustomField>
    <fullName>Day_in_text_Last_Working_Day__c</fullName>
    <formula>CASE(
MOD( Last_Working_Day__c - DATE( 1900, 1, 8 ), 7 ),
0, &quot;Monday&quot;,
1, &quot;Tuesday&quot;,
2, &quot;Wednesday&quot;,
3, &quot;Thursday&quot;,
4, &quot;Friday&quot;,
5, &quot;Saturday&quot;,
&quot;Sunday&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day in text(Last Working Day)</label>
    <type>Text</type>
</CustomField>