Githubsalesforcebackup/force-app/main/default/objects/Relieving_Letter__c/fields/Hr_Director_Name__c.field-meta.xml
<CustomField>
    <fullName>Hr_Director_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hr Director Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>