Githubsalesforcebackup/force-app/main/default/objects/Relieving_Letter__c/fields/Last_Working_Day__c.field-meta.xml
<CustomField>
    <fullName>Last_Working_Day__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Working Day</label>
    <type>Date</type>
</CustomField>