Githubsalesforcebackup/force-app/main/default/objects/Relieving_Letter__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject</label>
    <length>20</length>
    <type>Text</type>
</CustomField>