Githubsalesforcebackup/force-app/main/default/objects/Relieving_Letter__c/validationRules/Date_should_not_fall_in_weekend.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_should_not_fall_in_weekend</fullName>
    <active>true</active>
    <errorConditionFormula>OR(MOD(Last_Working_Day__c - DATE( 1900, 1, 7 ), 7 ) == 0, MOD(Last_Working_Day__c - DATE( 1900, 1, 7 ), 7 ) == 6)</errorConditionFormula>
    <errorMessage>Date should not fall in weekend</errorMessage>
</ValidationRule>